refector:改变了文件路径

--- a/html/position/position.html
+++ b/html/position/position.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>职位管理</title>
-	<link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap.min.css">
-	<script type="text/javascript" src="/lib/requirejs/require.min.js" data-main="/javascripts/position/position"></script>
+	<link rel="stylesheet" type="text/css" href="/c-online/lib/bootstrap/css/bootstrap.min.css">
+	<script type="text/javascript" src="/c-online/lib/requirejs/require.min.js" data-main="/c-online/javascripts/position/position"></script>
 	<style type="text/css" media="screen">
 		.position-table{
 			width: 1140px;
