--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>拉勾网首页</title>
-	<link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/lib/swiper/css/swiper.min.css">
-	<script type="text/javascript" src="/lib/requirejs/require.min.js" data-main="/javascripts/home/index"></script>
+	<link rel="stylesheet" type="text/css" href="/c-online/lib/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/c-online/lib/swiper/css/swiper.min.css">
+	<script type="text/javascript" src="/c-online/lib/requirejs/require.min.js" data-main="/c-online/javascripts/home/index"></script>
 	<style type="text/css" media="screen">
 		.swiper-container {
 		    width: 600px;
